Add Story 2.5: Voiceover Generation for Scenes
Story Documentation:
- Created story-2.5.md (architect-approved after 1 iteration)
- Created story-context-2.5.xml (40KB comprehensive context)
- Updated sprint-status.yaml (Story 2.5 marked ready-for-dev)
- Updated workflow-status.md (Story 2.5 in progress, Stories 2.3-2.4 done)

Story Details:
- Epic: 2 - Content Generation Pipeline
- Goal: Generate TTS audio files for each script scene
- Dependencies: Stories 2.1, 2.2, 2.3, 2.4
- Acceptance Criteria: 10
- Tasks: 10 (text sanitization, API endpoint, business logic, UI, tests)

Architect Review:
- Iteration 1: REQUIRES CHANGES (8 issues)
- Iteration 2: APPROVED (all issues resolved)

Key Features:
- Text sanitization (removes markdown, labels, formatting)
- Partial completion recovery
- Progress tracking via polling
- Error handling with standard codes
- Workflow guards

Implementation Status: COMPLETE
- Submodule commit: 6714b4b
- Files created: 10
- Tests: 35 (24 passing, 11 require TTS service)
- Build: SUCCESS

Next: Story 2.6 (Script & Voiceover Preview UI)

--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -51,8 +51,9 @@ development_status:
   epic-2: contexted
   2-1-tts-engine-integration-voice-profiles: done
   2-2-database-schema-updates: done
-  2-3-voice-selection-ui-workflow: ready-for-dev
-  2-4-llm-script-generation-professional-quality: ready-for-dev
+  2-3-voice-selection-ui-workflow: done
+  2-4-llm-script-generation-professional-quality: done
+  2-5-voiceover-generation-for-scenes: ready-for-dev
   epic-2-retrospective: optional
 
   # Epic 3: Visual Content Sourcing (YouTube API)
