Update .gitignore: Track .cache/audio structure, ignore audio files
Changes:
- Track .cache/audio directory structure (.gitkeep files)
- Ignore generated audio files (*.mp3, *.wav)
- Keeps directory structure for audio cache
- Prevents 21MB+ of binary files from being committed

This allows the application to have the required cache
directory structure without bloating the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,11 @@ yarn-error.log*
 next-env.d.ts
 
 # ai-video-generator specific
-/.cache
+/.cache/*
+!/.cache/audio
+/.cache/audio/**/*.mp3
+/.cache/audio/**/*.wav
+!/.cache/audio/**/.gitkeep
 /data
 /venv
 /models
